<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:layout_height="80dp"
            android:layout_width="match_parent"
            android:contentDescription="@string/logo"
            android:layout_marginTop="80dp"
            android:src="@drawable/blood"
            android:scaleType="centerInside"
            android:layout_gravity="center"
            android:id="@+id/login_logo"/>

        <TextView
            android:id="@+id/logo_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:gravity="center_horizontal"
            android:text="@string/logo_text"
            android:textAlignment="center"
            android:textColor="@color/Red"
            android:textSize="20sp"
            android:textStyle="bold" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/username"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:layout_marginTop="40dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:textSize="16sp"
            android:importantForAutofill="no"
            android:inputType="textEmailAddress"
            android:padding="10dp"
            android:hint="@string/user_name"
            android:drawableLeft="@drawable/user"
            android:drawablePadding="10dp"
            >


        </com.google.android.material.textfield.TextInputEditText>

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/password"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:layout_marginTop="20dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:textSize="16sp"
            android:importantForAutofill="no"
            app:passwordToggleEnabled="true"
            android:inputType="textPassword"
            android:hint="@string/password"
            android:padding="10dp"
            android:drawableLeft="@drawable/password"
            android:drawablePadding="10dp"

            >
        </com.google.android.material.textfield.TextInputEditText>
        <CheckBox
            android:id="@+id/remember_me"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:text="@string/remember_me"/>

        <Button
            android:id="@+id/btn_login"
            android:layout_height="wrap_content"
            android:layout_width="150dp"
            android:textSize="18sp"
            android:textStyle="bold"
            android:textColor="@color/White"
            android:text="@string/login"
            android:background="@drawable/btn_round"
            android:textAllCaps="false"
            android:layout_margin="20dp"
            android:layout_marginTop="40dp"
            />

        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_gravity="center|bottom"
            android:layout_marginBottom="20dp"
            android:visibility="gone" />

        <TextView
            android:id="@+id/signup_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:gravity="center_horizontal"
            android:text="@string/sign_up"
            android:textAlignment="center"
            android:textColor="@color/Green"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/forget_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/forget_password"
            android:textSize="18sp"
            android:textColor="@color/Green"
            android:textStyle="bold"
            android:layout_marginTop="40dp"
            android:textAlignment="center"
            android:gravity="center_horizontal" />




    </LinearLayout>

</ScrollView>