<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".Activities.EmailVerification1Activity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:padding="16dp"
        android:text="@string/verification_code"
        android:textSize="16sp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/verification_code_subtext"
        android:textAlignment="center"
        />

    <com.mukesh.OtpView
        android:id="@+id/otp_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:inputType="number"
        app:OtpHideLineWhenFilled="true"
        app:OtpItemCount="6"
        app:OtpItemSpacing="6dp"
        android:clickable="true"
        android:focusableInTouchMode="true"
        app:OtpLineColor="@color/Red"
        app:OtpState_filled="true"
        app:OtpViewType="line"
        style="@style/OtpWidget.OtpView"/>

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/newPassword"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:layout_marginTop="30dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:textSize="16sp"
        android:importantForAutofill="no"
        app:passwordToggleEnabled="true"
        android:inputType="textPassword"
        android:hint="@string/newPassword"
        android:padding="10dp"
        android:drawableLeft="@drawable/password"
        android:drawablePadding="10dp">
    </com.google.android.material.textfield.TextInputEditText>

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/confirmPassword"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:layout_marginTop="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:textSize="16sp"
        android:importantForAutofill="no"
        app:passwordToggleEnabled="true"
        android:inputType="textPassword"
        android:hint="@string/confirm_password"
        android:padding="10dp"
        android:drawableLeft="@drawable/password"
        android:drawablePadding="10dp">

    </com.google.android.material.textfield.TextInputEditText>

    <Button
        android:id="@+id/password_change_button"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:text="@string/changePassword"
        android:background="@color/Red"
        android:textColor="@android:color/white" />
</LinearLayout>