<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.SignUpActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/full_name"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:layout_marginTop="40dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:textSize="16sp"
            android:importantForAutofill="no"
            android:inputType="text"
            android:padding="10dp"
            android:drawableLeft="@drawable/user"
            android:drawablePadding="10dp"
            android:hint="@string/full_name">


        </com.google.android.material.textfield.TextInputEditText>

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/mobile"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:layout_marginTop="20dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:textSize="16sp"
            android:importantForAutofill="no"
            android:inputType="text"
            android:padding="10dp"
            android:drawableLeft="@drawable/user"
            android:drawablePadding="10dp"
            android:hint="@string/mobileNo">


        </com.google.android.material.textfield.TextInputEditText>

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/dob"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:layout_marginTop="20dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:textSize="16sp"
            android:importantForAutofill="no"
            android:inputType="date"
            android:padding="10dp"

            android:drawableLeft="@drawable/user"
            android:drawablePadding="10dp"
            android:hint="@string/dob">

        </com.google.android.material.textfield.TextInputEditText>



        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/district"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:layout_marginTop="20dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:textSize="16sp"
            android:importantForAutofill="no"
            android:inputType="text"
            android:padding="10dp"
            android:drawableLeft="@drawable/user"
            android:drawablePadding="10dp"
            android:hint="@string/district">

        </com.google.android.material.textfield.TextInputEditText>

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/municipality"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:layout_marginTop="20dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:textSize="16sp"
            android:importantForAutofill="no"
            android:inputType="text"

            android:padding="10dp"

            android:drawableLeft="@drawable/user"
            android:drawablePadding="10dp"
            android:hint="@string/municipality">

        </com.google.android.material.textfield.TextInputEditText>

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/local_address"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:layout_marginTop="20dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:textSize="16sp"
            android:importantForAutofill="no"
            android:inputType="text"
            android:padding="10dp"
            android:drawableLeft="@drawable/user"
            android:drawablePadding="10dp"
            android:hint="@string/local_address">

        </com.google.android.material.textfield.TextInputEditText>


        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/username"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:layout_marginTop="20dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:textSize="16sp"
            android:importantForAutofill="no"
            android:inputType="textEmailAddress"
            android:padding="10dp"
            android:drawableLeft="@drawable/user"
            android:drawablePadding="10dp"
            android:hint="@string/user_name">

        </com.google.android.material.textfield.TextInputEditText>
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/email"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:layout_marginTop="20dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:textSize="16sp"
            android:importantForAutofill="no"
            android:inputType="textEmailAddress"
            android:padding="10dp"
            android:drawableLeft="@drawable/user"
            android:drawablePadding="10dp"
            android:hint="@string/email">

        </com.google.android.material.textfield.TextInputEditText>

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/password"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:layout_marginTop="20dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:textSize="16sp"
            android:importantForAutofill="no"
            app:passwordToggleEnabled="true"
            android:inputType="textPassword"
            android:padding="10dp"
            android:drawableLeft="@drawable/password"
            android:drawablePadding="10dp"
            android:hint="@string/password">

        </com.google.android.material.textfield.TextInputEditText>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="horizontal">
            <LinearLayout
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:layout_marginTop="20dp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tvgender"
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    android:textSize="16sp"
                    android:importantForAutofill="no"

                    android:hint="@string/gender"
                    android:padding="10dp"
                    />
                <Spinner
                    android:id="@+id/genderSpinner"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:entries="@array/gender"
                    android:layout_marginTop="10dp"
                    />

            </LinearLayout>

            <LinearLayout
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:layout_marginTop="20dp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tvbloodgroup"
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    android:textSize="16sp"
                    android:importantForAutofill="no"

                    android:hint="@string/bg"
                    android:padding="10dp" />

                <Spinner
                    android:id="@+id/bg"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:entries="@array/bloodGroup"
                    android:layout_marginTop="10dp"
                    />

            </LinearLayout>

        </LinearLayout>



        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_gravity="center|bottom"
            android:layout_marginBottom="20dp"
            android:visibility="gone" />

        <Button
            android:id="@+id/btn_sign_up"
            android:layout_height="wrap_content"
            android:layout_width="150dp"
            android:textSize="18sp"
            android:textStyle="bold"
            android:textColor="@color/White"
            android:text="@string/signUp"
            android:background="@drawable/btn_round"
            android:textAllCaps="false"
            android:layout_margin="20dp"
            android:layout_marginTop="80dp"
            android:layout_gravity="center"
            />







    </LinearLayout>

</ScrollView>