<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.EnterEmailActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:textSize="16dp"
            android:text="@string/enterEmail"
            android:textAlignment="center"/>

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/email"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:layout_marginTop="40dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:textSize="16sp"
            android:importantForAutofill="no"
            android:inputType="textEmailAddress"
            android:padding="10dp"
            android:drawablePadding="10dp"
            android:hint="@string/email">

        </com.google.android.material.textfield.TextInputEditText>

        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_gravity="center|bottom"
            android:layout_marginTop="20dp"
            android:visibility="gone" />

        <Button
            android:id="@+id/btn_email"
            android:layout_height="wrap_content"
            android:layout_width="150dp"
            android:textSize="18sp"
            android:textStyle="bold"
            android:textColor="@color/White"
            android:text="@string/submit"
            android:background="@drawable/btn_round"
            android:textAllCaps="false"
            android:layout_margin="20dp"
            android:layout_marginTop="80dp"
            android:layout_gravity="center"
            />

    </LinearLayout>

</ScrollView>